fixed overflow issue

--- a/epic_site/src/styles/header.css
+++ b/epic_site/src/styles/header.css
@@ -12,18 +12,15 @@
 }
 
 .Banner {
-    box-sizing: border-box;
     position: fixed;
     z-index: 1;
-    width: 100%;
+    width: 100vw;
     height: 8vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: rgba(83, 108, 136, .7);
-    border: 1px black;
-    margin: auto;
 }
 
 .Banner img {
@@ -36,7 +33,7 @@
 .Menu-Button{
     background-color: rgba(0, 0, 0, 0);
     border: 1px;
-    width: 3vw;
+    width: 2.5vw;
     height: auto;
     transition-duration: .3s;
     margin: auto;
